src/test/ui/issues/issue-46843.stderr
error[E0744]: `match` is not allowed in a `const`
  --> $DIR/issue-46843.rs:7:20
   |
LL |   pub const Q: i32 = match non_const() {
   |  ____________________^
LL | |
LL | |     Thing::This => 1,
LL | |     Thing::That => 0
LL | | };
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0744`.
